--- a/Angular-SW-UI/src/styles.css
+++ b/Angular-SW-UI/src/styles.css
@@ -1,1 +1,31 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css';
+@import 'https://use.fontawesome.com/releases/v5.7.1/css/fontawesome.css';
+@import 'https://use.fontawesome.com/releases/v5.7.1/css/solid.css';
+
+body {
+    width: 100vw;
+    min-height: 100vh;
+    background-color: #363636;
+    background-image: linear-gradient(141deg,#1f191a 0,#363636 71%,#46403f 100%);
+    background-attachment: fixed;
+    background-size: 100%;
+    color: #f5f5f5;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 24px;
+}
+
+article {
+    padding: 96px 16px;
+}
+article.reverse {
+    flex-direction: row-reverse;
+}
+section {
+    justify-content: space-between;
+    padding: 32px;
+}
+
+app-menu {
+    position: absolute;
+}
