--- a/Angular-SW-UI/src/app/app.component.css
+++ b/Angular-SW-UI/src/app/app.component.css
@@ -1,6 +1,7 @@
 nav {
+    height: 5rem;
+    background-color: #363636;
     box-shadow: 0px 1px 5px #949292;
-    background-color: transparent;
 }
 .navbar-menu {
     margin-right: 16px;
