--- a/Angular-SW-UI/src/app/app.component.html
+++ b/Angular-SW-UI/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar">
+<nav class="navbar is-fixed-top">
     <div class="navbar-brand">
         <a class="navbar-item" routerLink="">
             STAR WARS UI
