--- a/Angular-SW-UI/src/styles.css
+++ b/Angular-SW-UI/src/styles.css
@@ -6,6 +6,7 @@
 body {
     width: 100vw;
     min-height: 100vh;
+    padding-top: 10rem !important;
     background-color: #363636;
     background-image: linear-gradient(141deg,#1f191a 0,#363636 71%,#46403f 100%);
     background-attachment: fixed;
