Size and type changed

--- a/Angular-SW-UI/src/app/components/pagination/pagination.component.html
+++ b/Angular-SW-UI/src/app/components/pagination/pagination.component.html
@@ -1,4 +1,4 @@
-<nav *ngIf="pagination.current !== undefined" class="pagination is-rounded is-large">
+<nav *ngIf="pagination.current !== undefined" class="pagination is-medium">
     <ul class="pagination-list">
         <li>
             <a class="pagination-link" [routerLink]="'/' + pagination.prefix + '/page/' + pagination.first">FIRST</a>
